--- a/PBScraper/PBScraper.csproj
+++ b/PBScraper/PBScraper.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.8.0" />
     <PackageReference Include="MySqlConnector" Version="0.51.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="ScrapySharp" Version="3.0.0" />
   </ItemGroup>
 
